--- a/PPl3/Areas/User/Views/HomeUser/Detail.cshtml
+++ b/PPl3/Areas/User/Views/HomeUser/Detail.cshtml
@@ -673,7 +673,7 @@
 
                                                 </div>
                                                 <span>2 weeks ago</span>
-                                                <p>Stay Dates : @item.transaction.booking.check_in_date.Value.ToString("dd/MM/yyyy") - @item.transaction.booking.check_out_date.Value.ToString("dd/MM/yyyy")</p>
+                                                <p>Stay Dates : @item.transaction.bookings.FirstOrDefault().check_in_date.Value.ToString("dd/MM/yyyy") - @item.transaction.bookings.FirstOrDefault().check_out_date.Value.ToString("dd/MM/yyyy")</p>
                                             </div>
 
                                             <div class="body_comment_detail">
@@ -1010,7 +1010,7 @@
 
                                             </div>
                                             <span>2 weeks ago</span>
-                                            <p>Stay Dates : @item.transaction.booking.check_in_date.Value.ToString("dd/MM/yyyy") - @item.transaction.booking.check_out_date.Value.ToString("dd/MM/yyyy")</p>
+                                            <p>Stay Dates : @item.transaction.bookings.FirstOrDefault().check_in_date.Value.ToString("dd/MM/yyyy") - @item.transaction.bookings.FirstOrDefault().check_out_date.Value.ToString("dd/MM/yyyy")</p>
                                         </div>
 
                                         <div class="body_comment_detail">
