--- a/PPl3/ExtraFiles/assets/css/admin.css
+++ b/PPl3/ExtraFiles/assets/css/admin.css
@@ -20,7 +20,7 @@
   align-items: center;
 }
 .mg-bt{
-  margin-bottom: 20px;
+  margin-bottom: 15px;
 }
 .sidebar{
   position: fixed;
@@ -407,6 +407,8 @@
 .avatar img{
   width: 50px;
   border-radius: 100%;
+  object-fit:cover;
+  height:50px;
   border: 3px solid #ccc;
 }
 
@@ -530,12 +532,14 @@
 
 .avatar_infor{
   width: 100%;
-  padding: 30px;
+  padding: 10px;
 }
 
 .avatar_infor img{
   width: 150px;
-  border-radius: 100%;
+  border-radius: 80%;
+  object-fit:cover;
+  height:150px;
 }
 
 .infor_box{
@@ -553,6 +557,7 @@
 .img_cmnd img{
   width: 150px;
   border-radius: 10px;
+  height:100px;
 }
 
 .info_emergency{
@@ -674,7 +679,7 @@
 
 .text_desciption{
   overflow: auto;
-  height: 300px;
+  height: 200px;
   border: 1px solid #000;
   border-radius: 10px;
   padding: 5px 20px;
@@ -766,4 +771,8 @@
 }
 .btn_img button:hover{
   color: #424242;
+}
+
+.close {
+    display: none !important;
 }
