--- a/PPl3/ExtraFiles/assets/css/admin.css
+++ b/PPl3/ExtraFiles/assets/css/admin.css
@@ -14,6 +14,10 @@
   display: flex !important;
 }
 
+.close{
+  display: none !important;
+}
+
 .center{
   display: flex;
   justify-content: center;
@@ -339,11 +343,12 @@
   fill: #949494;
 }
 
+.item_user:first-child h2,
 .item h2{
   font-size: 55px;
   align-self: center;
 }
-
+.item_user:first-child h2>i,
 .item h2>i{
   font-size: 25px;
 }
@@ -766,4 +771,70 @@
 }
 .btn_img button:hover{
   color: #424242;
+}
+
+#user{
+  display: none;
+}
+
+.container_user{
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0 20px;
+  margin-bottom: 20px;
+}
+
+.item_user:first-child{
+  text-align: center;
+  flex: 1;
+}
+
+.number_box{
+  background-color: #1d1b31;
+  padding: 45px 25px;
+  border-radius: 10px;
+  color: #fff;
+  margin-bottom: 30px;
+}
+
+.search{
+  display: flex;
+  align-items: center;
+}
+
+.search input{
+  padding: 10px;
+    font-size: 17px;
+    border: none;
+    border-radius: 10px;
+    background-color: #1d1b31;
+    color: #fff;
+}
+
+.search button{
+  font-size: 25px;
+  padding: 3px 5px;
+  margin-right: 15px;
+  border-radius: 10px;
+  border: none;
+  color: #fff;
+  background-color: #1d1b31;
+}
+
+.item_user:last-child{
+  flex: 4;
+  height: 285px;
+  margin: 0 20px;
+  border-radius: 10px;
+  overflow: auto;
+  border: 1px solid #000;
+}
+
+
+#notification{
+  display: none;
+}
+
+#analytics{
+  display: none;
 }
