--- a/PPl3/Areas/Host/Views/HomeHost/Listing.cshtml
+++ b/PPl3/Areas/Host/Views/HomeHost/Listing.cshtml
@@ -59,9 +59,9 @@
 
 
                     <div class="nav_menu">
-                        <div class="alert_icon">
+                        @*<div class="alert_icon">
                             <button><i class="fa-regular fa-bell"></i></button>
-                        </div>
+                        </div>*@
                         <div class="nav_login">
                             <button class="js_menuUser_btn"><i class="fa-solid fa-bars"></i></button>
                             @{
