--- a/PPl3/Areas/User/Views/HomeUser/ChatUser.cshtml
+++ b/PPl3/Areas/User/Views/HomeUser/ChatUser.cshtml
@@ -251,7 +251,7 @@
                             <div class="input_mess">
                                 
                                 <input type="file" hidden accept="img/*" id="img_mess">
-                                <button class="add_file_btn"><i class="fa-solid fa-circle-plus"></i></button>
+                                <button class="add_file_btn" accept=".jpg, .png"><i class="fa-solid fa-circle-plus"></i></button>
                                 <input type="text" id="message_send" placeholder="Aa....">
                                 <button class="send_btn"><i class="fa-solid fa-paper-plane"></i></button>
                             </div>
