uppdate admin page

--- a/PPl3/Areas/Admin/Views/HomeAdmin/Index.cshtml
+++ b/PPl3/Areas/Admin/Views/HomeAdmin/Index.cshtml
@@ -98,7 +98,7 @@
                         <div class="job">Web designer</div>
                     </div>
                 </div>
-                <i class='bx bx-log-out' id="log_out"></i>
+                <i class='bx bx-log-out' id="log_out" onclick="window.location.href='/admin/homeadmin/logout'"></i>
             </li>
         </ul>
     </div>
