--- a/PPl3/Areas/Admin/Views/HomeAdmin/Index.cshtml
+++ b/PPl3/Areas/Admin/Views/HomeAdmin/Index.cshtml
@@ -5,8 +5,8 @@
 
 @{
     PPl3.Models.PPL3Entities db = new PPl3.Models.PPL3Entities();
-    List<PPl3.Models.browser_becomes_host> host_browsing_list = db.browser_becomes_host.Where(item => item.status == false).ToList();
-    List<PPl3.Models.Browse_hotel_listings> property_browing_list = db.Browse_hotel_listings.Where(item => item.status == false).ToList();
+    List<PPl3.Models.browser_becomes_host> host_browsing_list = db.browser_becomes_host.ToList();
+    List<PPl3.Models.Browse_hotel_listings> property_browing_list = db.Browse_hotel_listings.ToList();
     // Đảm bảo rằng tổng số lượng người dùng không phải là 0 trước khi thực hiện phép chia
     int totalUsers = db.users.Count();
     int totalProperties = db.properties.Count();
@@ -1046,7 +1046,7 @@
 
         </div>
     </section>
-    <script src="~/ExtraFiles/JS/admin.js?v=2"></script>
+    <script src="~/ExtraFiles/JS/admin.js?v=3"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </body>
 </html>
@@ -1133,8 +1133,8 @@
             data: { user_id: user_id },
             success: function (data) {
                 console.log(data);
-                var inforHostDetail = document.querySelector(`.info_host_detail.${user_id}`)
-                var containerInforHost = document.querySelector(`.container_info_host.${user_id}`)
+                var inforHostDetail = document.querySelector(`.info_host_detail[class*="${user_id}"]`)
+                var containerInforHost = document.querySelector(`.container_info_host[class*="${user_id}"]`)
                 containerInforHost.classList.add(`animationInfor`)
                 inforHostDetail.classList.remove('openHost');
 
@@ -1152,8 +1152,8 @@
             data: { user_id: user_id },
             success: function (data) {
                 console.log(data);
-                var inforHostDetail = document.querySelector(`.info_host_detail.${user_id}`)
-                var containerInforHost = document.querySelector(`.container_info_host.${user_id}`)
+                var inforHostDetail = document.querySelector(`.info_host_detail[class*="${user_id}"]`)
+                var containerInforHost = document.querySelector(`.container_info_host[class*="${user_id}"]`)
                 containerInforHost.classList.add(`animationInfor`)
                 inforHostDetail.classList.remove('openHost');
                 document.querySelector(`.user_${user_id}`).classList.add('close');
