--- a/PPl3/Areas/User/Views/HomeUser/SignUp.cshtml
+++ b/PPl3/Areas/User/Views/HomeUser/SignUp.cshtml
@@ -29,11 +29,11 @@
                 <form method="post" action="/user/homeUser/SignUp">
                     <h1>Create Account</h1>
                     @*<div class="social-icons">
-                            <a href="#" class="icon"><i class="fa-brands fa-google-plus-g"></i></a>
-                            <a href="#" class="icon"><i class="fa-brands fa-facebook-f"></i></a>
-                            <a href="#" class="icon"><i class="fa-brands fa-github"></i></a>
-                            <a href="#" class="icon"><i class="fa-brands fa-linkedin-in"></i></a>
-                        </div>*@
+            <a href="#" class="icon"><i class="fa-brands fa-google-plus-g"></i></a>
+            <a href="#" class="icon"><i class="fa-brands fa-facebook-f"></i></a>
+            <a href="#" class="icon"><i class="fa-brands fa-github"></i></a>
+            <a href="#" class="icon"><i class="fa-brands fa-linkedin-in"></i></a>
+        </div>*@
                     <span class="content">or use your email for registeration</span>
                     @if (Model.account_name != null)
                     {
@@ -65,11 +65,13 @@
                     {
                         <input type="text" required placeholder="Passport Code" name="passport_code" value="@Model.passport_code">
                         @Html.ValidationMessage("Passport", new { @class = "error-message" })
+                        @Html.ValidationMessage("PassportExit", new { @class = "error-message" })
                     }
                     else
                     {
                         <input type="text" required placeholder="Passport Code" name="passport_code">
                         @Html.ValidationMessage("Passport", new { @class = "error-message" })
+                        @Html.ValidationMessage("PassportExit", new { @class = "error-message" })
 
                     }
                     <div style="display: flex; align-items: center;">
