--- a/PPl3/Views/Home/Detail.cshtml
+++ b/PPl3/Views/Home/Detail.cshtml
@@ -627,7 +627,7 @@
                                                     <p>Responds within an hour</p>
                                                 </div>
                                                 <div class="evaluate_message_btn">
-                                                    <button onclick="window.location.href = '/user/homeuser/addFriend?id=@property.userId'">Message Host</button>
+                                                    <button onclick="window.location.href = '/user/homeuser/addFriend?userID=@property.userId'">Message Host</button>
                                                 </div>
                                             </div>
                                         </div>
