Successfully edited and sent to gmail after successfully browsing the hotel

--- a/PPl3/Areas/Admin/Views/HomeAdmin/AccpectHotel.cshtml
+++ b/PPl3/Areas/Admin/Views/HomeAdmin/AccpectHotel.cshtml
@@ -92,7 +92,7 @@
             color: #ffffff !important;
         }
 
-        @media only screen and (max-width:600px) {
+      
             .es-m-p0r {
                 padding-right: 0px !important
             }
@@ -320,11 +320,11 @@
             }
         }
 
-        @media screen and (max-width:384px) {
+        @*@media screen and (max-width:384px) {
             .mail-message-content {
                 width: 414px !important
             }
-        }
+        }*@
     </style>
 </head>
 <body class="body" style="width:100%;height:100%;padding:0;Margin:0">
