--- a/PPl3/Areas/Host/Views/HomeHost/Listing.cshtml
+++ b/PPl3/Areas/Host/Views/HomeHost/Listing.cshtml
@@ -152,7 +152,7 @@
                                                     <div class="in_progress">
                                                         @if (item.p_status == 0)
                                                         {
-                                                            if(item.Browse_hotel_listings.FirstOrDefault() != null) { 
+                                                            if(item.Date_Post == null) { 
                                                                 <button><i class="fa-solid fa-circle check-room-2" style="color:darkgoldenrod"></i> Pending</button>
                                                                 
                                                             }
@@ -193,7 +193,16 @@
                                                     <div class="in_progress">
                                                         @if (item.p_status == 0)
                                                         {
-                                                            <button><i class="fa-solid fa-circle check-room-2"></i> Unfinished</button>
+                                                            if (item.Date_Post == null)
+                                                            {
+                                                                <button><i class="fa-solid fa-circle check-room-2" style="color:darkgoldenrod"></i> Pending</button>
+
+                                                            }
+                                                            else
+                                                            {
+                                                                <button><i class="fa-solid fa-circle check-room-2"></i> Unfinished</button>
+
+                                                            }
 
 
                                                         }
@@ -289,7 +298,16 @@
                                             }
                                             @if (item.p_status == 0)
                                             {
-                                                <button><i class="fa-solid fa-circle check-room-2"></i> Unfinished</button>
+                                                if (item.Date_Post == null)
+                                                {
+                                                    <button><i class="fa-solid fa-circle check-room-2" style="color:darkgoldenrod"></i> Pending</button>
+
+                                                }
+                                                else
+                                                {
+                                                    <button><i class="fa-solid fa-circle check-room-2"></i> Unfinished</button>
+
+                                                }
 
 
                                             }
